--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <p><i class="fab fa-github"></i> <a href="https://github.com/Rajesh-Myada" target="_blank">Rajesh-Myada</a></p>
                     <p><i class="fas fa-code"></i> <a href="https://leetcode.com/Rajesh_Myada" target="_blank">Rajesh_Myada</a></p>
                     <div class="social-icons">
-                        <a href="https://linkedin.com/in/rajesh-myada" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/rajesh-myada-ba4727230/" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/Rajesh-Myada" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://leetcode.com/Rajesh_Myada" target="_blank"><i class="fas fa-code"></i></a>
                     </div>
