--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="contact-info">
                     <h3>Get In Touch</h3>
                     <p><i class="fas fa-envelope"></i> <a href="mailto:myadarajesh2001@gmail.com">myadarajesh2001@gmail.com</a></p>
-                    <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/rajesh-myada" target="_blank">Rajesh Myada</a></p>
+                    <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/rajesh-myada-ba4727230/" target="_blank">Rajesh Myada</a></p>
                     <p><i class="fab fa-github"></i> <a href="https://github.com/Rajesh-Myada" target="_blank">Rajesh-Myada</a></p>
                     <p><i class="fas fa-code"></i> <a href="https://leetcode.com/Rajesh_Myada" target="_blank">Rajesh_Myada</a></p>
                     <div class="social-icons">
